--- a/views/dashboard/post/index.hbs
+++ b/views/dashboard/post/index.hbs
@@ -33,7 +33,7 @@
                   Updated at
                 </th>
                 <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                  Published at
+                  Published
                 </th>
                 <th scope="col" class="relative px-6 py-3">
                   <span class="sr-only">Actions</span>
@@ -53,7 +53,7 @@
                   {{ readableDate this.updatedAt }}
                 </td>
                 <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">
-                  {{ readableDate this.publishedAt }}
+                  {{ this.published }}
                 </td>
                 <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
                   <a href="/dashboard/posts/{{ this.id }}/edit" class="text-blue-500 hover:text-blue-700">Edit</a>
