--- a/views/partials/dashboard/post/form.hbs
+++ b/views/partials/dashboard/post/form.hbs
@@ -89,7 +89,7 @@
           <div class="mt-4 space-y-4">
             <div class="relative flex items-start">
               <div class="flex items-center h-5">
-                <input {{#if post.publishedAt}} checked {{/if}} id="publish" name="publish" type="checkbox" class="focus:ring-indigo-500 h-4 w-4 text-indigo-600 border-gray-300 rounded">
+                <input {{#if post.published}} checked {{/if}} id="publish" name="publish" type="checkbox" class="focus:ring-indigo-500 h-4 w-4 text-indigo-600 border-gray-300 rounded">
               </div>
               <div class="ml-3 text-sm">
                 <label for="publish" class="font-medium text-gray-700">Immediately</label>
