🔂 Update home page

--- a/views/home/index.hbs
+++ b/views/home/index.hbs
@@ -15,9 +15,9 @@
   <div class="row">
     <div class="col-2"></div>
     <div class="col-6 fw-light">
-      <p>Hola! me llamo Vicente Gutiérrez y te doy la bienvenida a mi sitio web.</p>
-      <p>Soy desarrollador de software y actualmente trabajo principalmente con NodeJS (JavaScript) y Laravel (PHP).</p>
-      <p>Del lado derecho encontrarás la forma de contactarme y algunos links a parte de mi trabajo.</p>
+      <p>Hola! mi nombre es Vicente Gutiérrez 🧑‍💻 y te doy la bienvenida a mi sitio web.</p>
+      <p>Trabajo como desarrollador de software desde el 2014. Si bien, a lo largo de estos años he probado diferentes tecnologías, actualmente trabajo con <strong>NodeJS</strong> y <strong>JavaScript</strong> principalmente y un poco de <strong>PHP</strong> y <strong>Python</strong>.</p>
+      <p>Del lado derecho ➡️ encontrarás algunos links que te pueden ser de interés si deseas contactarme y otros te llevarán a algunas cosas en las que he estado trabajando últimamente.</p>
     </div>
     <div class="col-2">
       <ul class="list-unstyled fw-light">
